--- a/src/protocol/develop/actions/A1 - Asset Definition.yaml
+++ b/src/protocol/develop/actions/A1 - Asset Definition.yaml
@@ -14,8 +14,6 @@ metadata:
   validation: AssetCreation
   rejection: Rejection
 
-rules:
-  fee:
   inputs:
     - name: Administration
       label: "Administration's Public Address"
@@ -32,7 +30,7 @@ fields:
     description: "Three letter character that specifies the asset type."
     type: fixedchar
     size: 3
-    example_hex: 434f55
+    exampleHex: 434f55
     example: "COU"
 
   - name: AssetAuthFlags
@@ -46,7 +44,7 @@ fields:
     label: Transfers Permitted
     description: "Set to true if transfers are permitted between two parties, otherwise set to false to prevent peer-to-peer transfers."
     type: bool
-    example_hex: 01
+    exampleHex: 01
     example: 1
     notes: ""
 
@@ -55,7 +53,7 @@ fields:
     description: "If specified, the asset can only be traded within the specified trade restriction zone. For example, AUS would restrict to Australian residents only."
     type: Polity[]
     size: 16
-    example_hex: 474252
+    exampleHex: 474252
     example: "GBR"
     notes: ""
 
@@ -63,7 +61,7 @@ fields:
     label: Enforcement Orders Permitted
     description: "Set to true if the administration is permitted to make enforcement orders on user tokens and balances, otherwise set to false to disable this feature."
     type: bool
-    example_hex: 01
+    exampleHex: 01
     example: 1
     notes: ""
 
@@ -77,7 +75,7 @@ fields:
     description: "Multiplies a vote by the specified integer. Where 1 token is equal to 1 vote with a 1 for vote multipler (normal), 1 token = 3 votes with a multiplier of 3, for example. If zero, then holders of this asset don't get any votes for their tokens."
     type: uint
     size: 1
-    example_hex: 03
+    exampleHex: 03
     example: "3"
     notes: ""
 
@@ -85,7 +83,7 @@ fields:
     label: Administration Proposal
     description: "Set to true if the administration is permitted to make proposals outside of the smart contract scope."
     type: bool
-    example_hex: 01
+    exampleHex: 01
     example: true
     notes: "General Governance"
 
@@ -93,7 +91,7 @@ fields:
     label: Holder Proposal
     description: "Set to true if a holder is permitted to make proposals outside of the smart contract scope."
     type: bool
-    example_hex: 01
+    exampleHex: 01
     example: true
     notes: ""
 
@@ -102,10 +100,10 @@ fields:
     description: "Supported values: 1 - Contract-wide Asset Governance. 0 - Asset-wide Asset Governance.  If a referendum or initiative is used to propose a modification to a subfield controlled by the asset auth flags, then the vote will either be a contract-wide vote (all assets vote on the referendum/initiative) or an asset-wide vote (only this asset votes on the referendum/initiative) depending on the value in this subfield.  The voting system specifies the voting rules."
     type: uint
     size: 1
-    int_values:
+    intValues:
       - 0
       - 1
-    example_hex: 01
+    exampleHex: 01
     example: "1"
     notes: ""
 
