--- a/src/protocol/develop/actions/G3 - Ballot Cast.yaml
+++ b/src/protocol/develop/actions/G3 - Ballot Cast.yaml
@@ -11,8 +11,6 @@ metadata:
   validation: BallotCounted
   rejection: Rejection
 
-rules:
-  fee:
   inputs:
     - name: User
       label: "Token Owner's Public Address"
@@ -36,6 +34,6 @@ fields:
     type: varchar
     # varchar size is number of bits to serialize the size of the value
     size: 8
-    example_hex: 0141
+    exampleHex: 0141
     example: "A"
     notes: ""
