--- a/src/protocol/develop/actions/G4 - Ballot Counted.yaml
+++ b/src/protocol/develop/actions/G4 - Ballot Counted.yaml
@@ -11,8 +11,6 @@ metadata:
   validation: None
   rejection: Rejection
 
-rules:
-  fee:
   inputs:
     - name: Contract
       label: Contract Public Address
@@ -36,7 +34,7 @@ fields:
     type: varchar
     # varchar size is number of bits to serialize the size of the value
     size: 8
-    example_hex: 0141
+    exampleHex: 0141
     example: "A"
     notes: ""
 
