--- a/src/protocol/develop/actions/R1 - Establishment.yaml
+++ b/src/protocol/develop/actions/R1 - Establishment.yaml
@@ -9,8 +9,6 @@ metadata:
   label: Establishment
   description: "Establishes an on-chain register."
 
-rules:
-  fee:
   inputs:
     - name: Register
       label: "Register Public Address"
@@ -28,6 +26,6 @@ fields:
     type: varchar
     # varchar size is number of bits to serialize the size of the value
     size: 32
-    example_hex: 000000174e6f72746820416d65726963612057686974656c697374
+    exampleHex: 000000174e6f72746820416d65726963612057686974656c697374
     example: "North America Whitelist"
     notes: ""
