--- a/src/protocol/develop/actions/R2 - Addition.yaml
+++ b/src/protocol/develop/actions/R2 - Addition.yaml
@@ -9,8 +9,6 @@ metadata:
   label: Addition
   description: "Adds an entry to the Register."
 
-rules:
-  fee:
   inputs:
     - name: Register
       label: "Register Public Address"
@@ -28,6 +26,6 @@ fields:
     type: varchar
     # varchar size is number of bits to serialize the size of the value
     size: 32
-    example_hex: 00000008757365726e616d65
+    exampleHex: 00000008757365726e616d65
     example: "username"
     notes: ""
