--- a/src/messages/develop/general/0003 - Private Message.yaml
+++ b/src/messages/develop/general/0003 - Private Message.yaml
@@ -2,7 +2,7 @@
 # Private Message: Generic private message. Sent to another address(es). Encryption is to be used.
 #
 
-code: 3
+code: "0003"
 
 metadata:
   name: PrivateMessage
@@ -10,14 +10,6 @@ metadata:
   description: "Generic private message. Sent to another address(es). Encryption is to be used."
 
 fields:
-  - name: Version
-    label: Version
-    type: uint
-    description: Payload Version
-    size: 1
-    example: 0
-    computed: true
-
   - name: Timestamp
     label: Timestamp
     description: "Timestamp in nanoseconds for when the message sender creates the transaction."
