--- a/src/protocol/develop/actions/G3 - Ballot Cast.yaml
+++ b/src/protocol/develop/actions/G3 - Ballot Cast.yaml
@@ -2,7 +2,7 @@
 # Ballot Cast Action: Used by Token Owners to cast their ballot (vote) on proposals. 1 Vote per token unless a vote multiplier is specified in the relevant Asset Definition action.
 #
 
-code: G3
+id: G3
 
 metadata:
   name: BallotCast
@@ -31,6 +31,6 @@ fields:
     label: Vote
     description: "Length 1-255 bytes. 0 is not valid. Max length is the VoteMax value from the Proposal action. Accept, Reject, Abstain, Spoiled, Multiple Choice, or Preference List. 15 options total. Order of preference. 1st position = 1st choice. 2nd position = 2nd choice, etc. A is always Accept and B is always reject in a Y/N votes."
     type: varchar
-    # varchar size is number of bits to serialize the size of the value
-    size: 8
+    # varchar size is number of bytes to serialize the size of the value
+    size: 1
     example: "A"
