--- a/src/protocol/develop/actions/R1 - Establishment.yaml
+++ b/src/protocol/develop/actions/R1 - Establishment.yaml
@@ -2,7 +2,7 @@
 # Establishment Action: Establishes an on-chain register.
 #
 
-code: R1
+id: R1
 
 metadata:
   name: Establishment
@@ -24,6 +24,6 @@ fields:
     label: Message
     description: "A custom message to include with this action."
     type: varchar
-    # varchar size is number of bits to serialize the size of the value
-    size: 32
+    # varchar size is number of bytes to serialize the size of the value
+    size: 4
     example: "North America Whitelist"
