--- a/src/protocol/develop/actions/G1 - Proposal.yaml
+++ b/src/protocol/develop/actions/G1 - Proposal.yaml
@@ -2,7 +2,7 @@
 # Proposal Action: Allows the Administration/Token Holders to propose a change (aka Initiative/Shareholder vote).  A significant cost - specified in the Contract Formation - can be attached to this action when sent from Token Holders to reduce spam, as the resulting vote will be put to all token owners.
 #
 
-code: G1
+id: G1
 
 metadata:
   name: Proposal
@@ -80,8 +80,8 @@ fields:
     label: Vote Options
     description: "Length 1-255 bytes. 0 is not valid. Each byte allows for a different vote option. Typical votes will likely be multiple choice or Y/N. Vote instances are identified by the Tx-ID. AB would be used for Y/N (binary) type votes. When Specific is true, only AB is a valid value."
     type: varchar
-    # varchar size is number of bits to serialize the size of the value
-    size: 8
+    # varchar size is number of bytes to serialize the size of the value
+    size: 1
     example: "ABCDEFGHIJKLMNO"
 
   - name: VoteMax
@@ -95,8 +95,8 @@ fields:
     label: Proposal Description
     description: "Length restricted by the Bitcoin protocol. 0 is valid. Description or details of the vote"
     type: varchar
-    # varchar size is number of bits to serialize the size of the value
-    size: 32
+    # varchar size is number of bytes to serialize the size of the value
+    size: 4
     example: "Change the name of the Contract."
 
   - name: ProposalDocumentHash
