--- a/src/protocol/develop/actions/M1 - Message.yaml
+++ b/src/protocol/develop/actions/M1 - Message.yaml
@@ -7,7 +7,7 @@
 # in the Message Types table.
 #
 
-code: M1
+id: M1
 
 metadata:
   name: Message
@@ -36,12 +36,6 @@ fields:
     description: "Associates the message to a particular output by the index."
     type: uint16[]
 
-  - name: MessageType
-    label: Message Type
-    description: "Potential for up to 65,535 different message types. Values from resources/Messages.yaml"
-    type: uint16
-    example: "6000"
-
   - name: MessagePayload
     label: Message Payload
     description: >
@@ -50,6 +44,6 @@ fields:
       announcements or private 'notes' if encrypted. See Message Types for a full list of
       potential use cases.
     type: varbin
-    # varbin size is number of bits to serialize the size of the data
-    size: 32
+    # varbin size is number of bytes to serialize the size of the data
+    size: 4
     example: "Hello world!"
