--- a/src/protocol/develop/actions/M2 - Rejection.yaml
+++ b/src/protocol/develop/actions/M2 - Rejection.yaml
@@ -2,7 +2,7 @@
 # Rejection Action: used to reject request actions that do not comply with the Contract. If money is to be returned to a User then it is used in lieu of the Settlement Action to properly account for token balances. All Administration/User request Actions must be responded to by the Contract with an Action.  The only exception to this rule is when there is not enough fees in the first Action for the Contract response action to remain revenue neutral.  If not enough fees are attached to pay for the Contract response then the Contract will not respond.
 #
 
-code: M2
+id: M2
 
 metadata:
   name: Rejection
@@ -43,8 +43,8 @@ fields:
     label: Message
     description: "Length 0-65,535 bytes. Message that explains the reasoning for a rejection, if needed.  Most rejection types will be captured by the Rejection Type Subfield."
     type: varchar
-    # varchar size is number of bits to serialize the size of the value
-    size: 16
+    # varchar size is number of bytes to serialize the size of the value
+    size: 2
     example: "Sorry, you don't have enough tokens."
 
   - name: Timestamp
