--- a/src/protocol/develop/actions/R2 - Addition.yaml
+++ b/src/protocol/develop/actions/R2 - Addition.yaml
@@ -2,7 +2,7 @@
 # Addition Action: Adds an entry to the Register.
 #
 
-code: R2
+id: R2
 
 metadata:
   name: Addition
@@ -24,6 +24,6 @@ fields:
     label: Message
     description: "A custom message to include with this action."
     type: varchar
-    # varchar size is number of bits to serialize the size of the value
-    size: 32
+    # varchar size is number of bytes to serialize the size of the value
+    size: 4
     example: "username"
