--- a/src/protocol/develop/types/Oracle.yaml
+++ b/src/protocol/develop/types/Oracle.yaml
@@ -8,20 +8,20 @@ fields:
     label: Oracle Name
     description: "Length 0-255 bytes. 0 is valid. Oracle X Name (eg. Coinbase, Tokenized, etc.)"
     type: varchar
-    # varchar size is number of bits to serialize the size of the value
-    size: 8
+    # varchar size is number of bytes to serialize the size of the value
+    size: 1
     example: "Tokenized"
 
   - name: URL
     label: Oracle URL
     description: "Length 0-255 bytes. 0 is valid. If applicable: URL for REST/RPC Endpoint"
     type: varchar
-    # varchar size is number of bits to serialize the size of the value
-    size: 8
+    # varchar size is number of bytes to serialize the size of the value
+    size: 1
     example: "http://oracle.tokenized.com/api/3650d9/version2010"
 
   - name: PublicKey
     label: Oracle Public Key
     description: "Length 0-255 bytes. 0 is not valid. Oracle Public Key (eg. Bitcoin Public key), used to confirm digital signed proofs for transfers.  Can also be the same public address that controls a Tokenized Oracle."
     type: varbin
-    size: 8
+    size: 1
