--- a/src/protocol/develop/types/VotingSystem.yaml
+++ b/src/protocol/develop/types/VotingSystem.yaml
@@ -8,8 +8,8 @@ fields:
     label: Voting System Name
     description: "eg. Special Resolutions, Ordinary Resolutions, Fundamental Matters, General Matters, Directors' Vote, Poll, etc."
     type: varchar
-    # varchar size is number of bits to serialize the size of the value
-    size: 8
+    # varchar size is number of bytes to serialize the size of the value
+    size: 1
     example: "Special Resolutions"
 
   - name: VoteType
